@@ -68,8 +68,9 @@ function Db(databaseName, serverConfig, options) {
   this._applicationClosed = false;
   // Fetch the override flag if any
   var overrideUsedFlag = this.options['override_used_flag'] == null ? false : this.options['override_used_flag'];
+
   // Verify that nobody is using this config
-  if(!overrideUsedFlag && typeof this.serverConfig == 'object' && this.serverConfig._isUsed()) {
+  if(!overrideUsedFlag && typeof this.serverConfig == 'object' && this.serverConfig._isUsed()) {    
     throw new Error("A Server or ReplSet instance cannot be shared across multiple Db instances");
   } else if(!overrideUsedFlag && typeof this.serverConfig == 'object'){
     // Set being used
@@ -1956,6 +1957,9 @@ Db.connect = function(url, options, callback) {
   var replSetServersOptions = options.replSet || options.replSetServers || {};
   var dbOptions = options.db || {};
 
+  // If callback is null throw an exception
+  if(callback == null) throw new Error("no callback function provided");
+
   // Parse the string
   var object = parse(url);
   // Merge in any options for db in options object
@@ -1987,9 +1991,16 @@ Db.connect = function(url, options, callback) {
   // need to verify that it's one or the other and fail if it's a mix
   // Connect to all servers and run ismaster
   for(var i = 0; i < object.servers.length; i++) {
-    new Db(object.dbName
-      , new Server(object.servers[i].host, object.servers[i].port, {socketOptions:{connectTimeoutMS:1000}, auto_reconnect:false})
-      , {safe:false, native_parser:false}).open(function(err, db) {
+    // Set up the Server object
+    var _server = object.servers[i].domain_socket 
+        ? new Server(object.servers[i].domain_socket, {socketOptions:{connectTimeoutMS:1000}, auto_reconnect:false})
+        : new Server(object.servers[i].host, object.servers[i].port, {socketOptions:{connectTimeoutMS:1000}, auto_reconnect:false});
+
+    // Attempt connect
+    new Db(object.dbName, _server, {safe:false, native_parser:false}).open(function(err, db) {
+        // Close the connection
+        db.close(true);
+        // Update number of servers
         totalNumberOfServers = totalNumberOfServers - 1;          
         var isMasterDoc = db.serverConfig.isMasterDoc;
         // Check what type of server we have
@@ -2001,7 +2012,7 @@ Db.connect = function(url, options, callback) {
           if(totalNumberOfMongosServers > 0 && totalNumberOfMongodServers > 0)
             return callback(new Error("cannot combine a list of replicaset seeds and mongos seeds"));
           
-          if(totalNumberOfMongodServers > 1) {
+          if(totalNumberOfMongodServers == 0 && object.servers.length == 1) {
             var obj = object.servers[0];
             serverConfig = obj.domain_socket ? 
                 new Server(obj.domain_socket, object.server_options)
@@ -2051,9 +2062,6 @@ var _finishConnecting = function(serverConfig, object, options, callback) {
   var db = new Db(object.dbName, serverConfig, object.db_options);  
   // Don't open the connection
   if(options.noOpen) return db;
-
-  // If callback is null throw an exception
-  if(callback == null) throw new Error("no callback function provided");
 
   // Open the db
   db.open(function(err, db){
