@@ -7,6 +7,7 @@
 - Intermittent (and rare) null callback exception when using ReplicaSets (Issue #752)
 - Force correct setting of read_secondary based on the read preference (Issue #741)
 - If using read preferences with secondaries queries will not fail if primary is down (Issue #744)
+- noOpen connection for Db.connect removed as not compatible with autodetection of Mongo type
 
 1.1.11 2012-10-10
 -----------------
